@@ -10,6 +10,7 @@
   to be resubmitted.
 * FEATURE: "Go To" button in search should redirect to search results if
   no such topic exists.
+* FEATURE: Be more efficient with caching to improve performance.
 * FEATURE: After editing a section, page will now reload to that section.
 * FEATURE: Remove option to disable topic versioning.
 * FEATURE: Updated Polish translations from Robert Matyja (dlpa).
